# stable-plane-based-csg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  spawn.py
include/: aabb.hh  benchmark.h  benchmark_writer.h  component_categorization.hh  csg_app.h  face_component_finder.hh  face_marker.hh  geometry.hh  hash.hh  integer_math.hh  intersection.hh  intersection_cut.hh  intersection_utils.hh  obj_config.hh  octree.hh  plane_polygon.hh  plane_triangle.hh  ray_cast.hh  utils.hh
src/: integer_math.cc  intersection.cc  intersection_cut.cc  main.cc  octree.cc  plane_polygon.cc
src/apps/: thesis_demo.cc  thesis_images.cc
src/tests/: aabb_test.cc  intersection_test.cc  polygon_cut_test.cc
